--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,21 +9,9 @@
     <link href="../assets/style.css" rel="stylesheet">
 </head>
 <body>
-    <style>
-        ul{
-            direction: rtl;
-        }
-        body {
-            background: url('https://cutewallpaper.org/21/professional-website-background/professional-images-for-website-background-13-Ride-Now-Pte-Ltd.jpg') no-repeat center center fixed;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-        }
-    </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Jonathan O'Connor</a>
+            <a class="navbar-brand" href="../index.html">Jonathan O'Connor</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,7 +19,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="portfolio.html">Portfolio</a>
