--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,29 @@
             </div>
         </div>
     </nav>
-
+    <div class="container">
+        <div class="col-xs-12 col-sm-9 page-content">
+            <div class="row page-content-header">
+                <h1>Contact</h1>
+            </div>
+            <div class="row page-content-body">
+                <div class="col-12">
+                    <div class="mb-3">
+                        <label for="nameFormInput" class="form-label">Name</label>
+                        <input type="text" class="form-control" placeholder="Name">
+                      </div>
+                      <div class="mb-3">
+                        <label for="emailFormInput" class="form-label">Email</label>
+                        <input type="email" class="form-control" placeholder="Email">
+                      </div>
+                      <div class="mb-3">
+                        <label for="messageFormInput" class="form-label">Message</label>
+                        <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
     crossorigin="anonymous"></script>
