added submit button to contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,6 +50,7 @@
                         <label for="messageFormInput" class="form-label">Message</label>
                         <textarea class="form-control" rows="3" placeholder="Message"></textarea>
                       </div>
+                      <button type="button" class="btn btn-primary">Submit</button>
                 </div>
             </div>
         </div>
