--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -41,7 +41,7 @@
             </div>
             <div class="row page-content-body">
                 <div class="col-12">
-                    <div class="row portfolio-row">
+                    <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row portfolio-row">
+                    <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
@@ -69,7 +69,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row portfolio-row">
+                    <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
