--- a/index.html
+++ b/index.html
@@ -34,22 +34,26 @@
         </div>
     </nav>
     <div class="container">
-            <div class="col-xs-12 col-sm-9 page-content">
-                <div class="row page-content-header">
-                    <h1>About Me</h1>
-                </div>
-                <div class="row page-content-body align-items-start">
-                    <div class="col-12">
-                        <img class="img-fluid about-me-img rounded float-start"
-                        src="assets/images/Placeholder-Img.png">
+        <section class="col-xs-12 col-sm-9 page-content">
+            <header class="row page-content-header">
+                <h1>About Me</h1>
+            </header>
+            <article class="row page-content-body align-items-start">
+                <div class="col-12">
+                    <img class="img-fluid about-me-img rounded float-start" src="assets/images/Placeholder-Img.png" alt="About Me">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est sequi vero magni dolores laudantium
                         quas inventore exercitationem minima? Porro, vel! Ad repellendus vitae odit alias dolores
                         dolorem labore, nesciunt obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Fugiat, voluptatem, deserunt ipsa cumque facilis delectus molestiae necessitatibus autem aperiam
-                        culpa, mollitia dicta pariatur praesentium commodi quam facere debitis ut quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio ut suscipit ea, voluptatum nulla modi distinctio, aliquid possimus explicabo et est, fuga dolor harum totam nesciunt dolore quaerat recusandae neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati sit atque aliquid ad reprehenderit officia magnam dicta repudiandae incidunt harum amet illum quasi architecto, sunt voluptates, sed ut. Fugiat.</p>
-                    </div>
+                        culpa, mollitia dicta pariatur praesentium commodi quam facere debitis ut quis. Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Odio ut suscipit ea, voluptatum nulla modi
+                        distinctio, aliquid possimus explicabo et est, fuga dolor harum totam nesciunt dolore quaerat
+                        recusandae neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati
+                        sit atque aliquid ad reprehenderit officia magnam dicta repudiandae incidunt harum amet illum
+                        quasi architecto, sunt voluptates, sed ut. Fugiat.</p>
                 </div>
-            </div>
+            </article>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
