--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,11 +32,11 @@
         </div>
     </nav>
     <div class="container">
-        <div class="col-xs-12 col-sm-9 page-content">
-            <div class="row page-content-header">
+        <section class="col-xs-12 col-sm-9 page-content">
+            <header class="row page-content-header">
                 <h1>Contact</h1>
-            </div>
-            <div class="row page-content-body">
+            </header>
+            <article class="row page-content-body">
                 <div class="col-12">
                     <div class="mb-3">
                         <label for="nameFormInput" class="form-label">Name</label>
@@ -52,8 +52,8 @@
                       </div>
                       <button type="button" class="btn btn-primary">Submit</button>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
