--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -35,37 +35,23 @@
     </nav>
 
     <div class="container">
-        <div class="col-xs-12 col-sm-9 page-content">
-            <div class="row page-content-header">
+        <section class="col-xs-12 col-sm-9 page-content">
+            <header class="row page-content-header">
                 <h1>Portfolio</h1>
-            </div>
-            <div class="row page-content-body">
+            </header>
+            <article class="row page-content-body">
                 <div class="col-12">
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
-                                    src="../assets/images/Placeholder-Img.png">
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 1">
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
-                                src="../assets/images/Placeholder-Img.png">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 col-lg-6">
-                            <div class="text-center">
-                                <img class="portfolio-img img-thumbnail rounded"
-                                src="../assets/images/Placeholder-Img.png">
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-lg-6">
-                            <div class="text-center">
-                                <img class="portfolio-img img-thumbnail rounded"
-                                src="../assets/images/Placeholder-Img.png">
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 2">
                             </div>
                         </div>
                     </div>
@@ -73,20 +59,34 @@
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
-                                src="../assets/images/Placeholder-Img.png">
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 3">
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
                             <div class="text-center">
                                 <img class="portfolio-img img-thumbnail rounded"
-                                    src="../assets/images/Placeholder-Img.png">
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 4">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-lg-6">
+                            <div class="text-center">
+                                <img class="portfolio-img img-thumbnail rounded"
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 5">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6">
+                            <div class="text-center">
+                                <img class="portfolio-img img-thumbnail rounded"
+                                    src="../assets/images/Placeholder-Img.png" alt="Portfolio Image 6">
                             </div>
                         </div>
                     </div>
 
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
