added sticky footer to each page, added personal information and image to the About Me

--- a/index.html
+++ b/index.html
@@ -40,21 +40,26 @@
             </header>
             <article class="row page-content-body align-items-start">
                 <div class="col-12">
-                    <img class="img-fluid about-me-img rounded float-start" src="assets/images/Placeholder-Img.png" alt="About Me">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est sequi vero magni dolores laudantium
-                        quas inventore exercitationem minima? Porro, vel! Ad repellendus vitae odit alias dolores
-                        dolorem labore, nesciunt obcaecati?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Fugiat, voluptatem, deserunt ipsa cumque facilis delectus molestiae necessitatibus autem aperiam
-                        culpa, mollitia dicta pariatur praesentium commodi quam facere debitis ut quis. Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Odio ut suscipit ea, voluptatum nulla modi
-                        distinctio, aliquid possimus explicabo et est, fuga dolor harum totam nesciunt dolore quaerat
-                        recusandae neque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati
-                        sit atque aliquid ad reprehenderit officia magnam dicta repudiandae incidunt harum amet illum
-                        quasi architecto, sunt voluptates, sed ut. Fugiat.</p>
+                    <img class="img-fluid about-me-img rounded float-start" src="assets/images/about-me-img.png"
+                        alt="About Me">
+                    <p> I'm a 22 year-old aspiring software developer living in Toronto. I am currently enrolled in my
+                        final semester for my Bachelor of Arts degree at the University of Toronto where I intend to
+                        graduate this spring. During my time there, I majored in Economics and minored in both History
+                        and Mathematics. I am also currently enrolled in the Full-Stack Coding Bootcamp offered by the
+                        University of Toronto School of Continuing Studies where I learned the skills used to build this
+                        webpage. I look forward to hopefully beginning my career in software development this spring
+                        following both my
+                        graduation and my completion of the UofT SCS coding bootcamp.</p>
                 </div>
             </article>
         </section>
+
     </div>
+    <footer class="footer fixed-bottom bg-light">
+        <div class="container text-center">
+            <span class="text-muted">Portfolio will be updated regularly</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
