--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link href="../assets/style.css" rel="stylesheet">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -41,22 +43,28 @@
                     <div class="mb-3">
                         <label for="nameFormInput" class="form-label">Name</label>
                         <input type="text" class="form-control" placeholder="Name">
-                      </div>
-                      <div class="mb-3">
+                    </div>
+                    <div class="mb-3">
                         <label for="emailFormInput" class="form-label">Email</label>
                         <input type="email" class="form-control" placeholder="Email">
-                      </div>
-                      <div class="mb-3">
+                    </div>
+                    <div class="mb-3">
                         <label for="messageFormInput" class="form-label">Message</label>
                         <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                      </div>
-                      <button type="button" class="btn btn-primary">Submit</button>
+                    </div>
+                    <button type="button" class="btn btn-primary">Submit</button>
                 </div>
             </article>
         </section>
     </div>
+    <footer class="footer fixed-bottom bg-light">
+        <div class="container text-center">
+            <span class="text-muted">Portfolio will be updated regularly</span>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
